--- a/docs/endpoints/Fun/ship.mdx
+++ b/docs/endpoints/Fun/ship.mdx
@@ -17,6 +17,10 @@ import TabItem from '@theme/TabItem';
         - Type: Image URL
   </TabItem>
     <TabItem value="optional" label="Optional">
+    - background
+      - Type: Image URL
+    - blur
+      - Type: Boolean
     - number
         - Type: Number
 :::note
