--- a/docs/endpoints/Utility/rankcard.mdx
+++ b/docs/endpoints/Utility/rankcard.mdx
@@ -35,8 +35,10 @@ import TabItem from '@theme/TabItem';
         - Type: Hex
     - border
         - Type: Boolean
+    - bordercolor
+        - Type: Hex
 :::note
-    The `xpcolor`, `fontcolor` & `bgcolor` fields should **not** contain **#**
+    The `xpcolor`, `fontcolor`, `bordercolor` & `bgcolor` fields should **not** contain **#**
 :::
     </TabItem>
 </Tabs>
