--- a/docs/endpoints/Utility/welcomecard.mdx
+++ b/docs/endpoints/Utility/welcomecard.mdx
@@ -1,9 +1,9 @@
-# Rank Card
-A cool rank card for your leveling system!
+# Welcome Card
+A cool welcome card for your welcoming system!
 ## How to use
 #### Base URL 
 ```js
-https://api.aggelos-007.xyz/rankcard
+https://api.aggelos-007.xyz/welcomecard
 ```
 ### Fields
 import Tabs from '@theme/Tabs';
